--- a/views/confirmation.ejs
+++ b/views/confirmation.ejs
@@ -22,7 +22,7 @@
                     <!--<p class="fs-5 text-warning mt-2 fw-bold hindi">कृपया इस रजिस्ट्रेशन नंबर को नोट करें या इस पृष्ठ का स्क्रीनशॉट लें! 📸</p>-->
                     <p class="fs-10 mb-0 fw-bold ">If you would like to add new Registration use this Registration button👇</p>
 
-                    <a href="https://shri-adiguru-puja-2024.onrender.com/registration" class="btn btn-success custom-btn  rounded mx-auto d-block">Registration</a>
+                    <a href="https://diwalipujasa2024.onrender.com/registration" class="btn btn-success custom-btn  rounded mx-auto d-block">Registration</a>
 
                     <!--<p class="fs-5 mt-1 fw-bold hindi">यदि आप नए पंजीकरण जोड़ना चाहते हैं तो कृपया "Registration" बटन का उपयोग करें। 👆</p>-->
                 </div>
@@ -30,11 +30,11 @@
                     <!--for deployment link need to give here  exit from conffirmation page un comment this command-->
                     <p class="fs-5 mb-0 fw-bold ">To exit, please click the Home page button: 👇</p>
 
-                    <a href="https://shriadigurupuja2024.in/" class="btn btn-success custom-btn  rounded mx-auto d-block">Home Page</a>
+                    <a href="https://diwalipujasa2024.onrender.com/" class="btn btn-success custom-btn  rounded mx-auto d-block">Home Page</a>
 
                     <!--<p class="fs-5 mt-1 fw-bold hindi">इस विंडो को बंद करने के लिए "होम पेज" बटन का उपयोग करें। 👆</p>-->
                     <!--for local setup exit from conffirmation page un comment this command-->
-                    <!--<a href="https://shriadigurupuja2024.cyclic.app/" class="btn btn-success custom-btn  rounded mx-auto d-block">Click here to exit</a>-->
+                    <!--<a href="https://diwalipujasa2024.onrender.com/" class="btn btn-success custom-btn  rounded mx-auto d-block">Click here to exit</a>-->
                 </div>
             </div>
         </div>
